"Added overflow, - bug with screen"
Former-commit-id: 8a0bad07eed08319356255188d55fa43b0534fe1

--- a/frontend/EduConnect/src/app/Messenger/student-thread-message/student-thread-message.component.css
+++ b/frontend/EduConnect/src/app/Messenger/student-thread-message/student-thread-message.component.css
@@ -1,4 +1,5 @@
 * {
+
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,6 +8,7 @@ html{
     position: relative;
 }
 body {
+    overflow-y: scroll;
     height: 100%;
     width: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -24,7 +26,7 @@ body {
     flex-direction: column;
     width: 100%;
     max-width: 900px;
-    height: 100%;
+    height: 87%;
     background-color: #ffffff;
     border-radius: 12px;
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
