--- a/frontend/EduConnect/src/app/ShoppingCart/cart-items/cart-items.component.css
+++ b/frontend/EduConnect/src/app/ShoppingCart/cart-items/cart-items.component.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    overflow-y: scroll;
     font-family: 'Poppins', sans-serif;
     background: linear-gradient(145deg, #8e44ad, #3498db);
 
