--- a/frontend/EduConnect/src/app/landingPage/header/header.component.css
+++ b/frontend/EduConnect/src/app/landingPage/header/header.component.css
@@ -5,9 +5,10 @@
 
 header {
   position: sticky;
+  top: 0;
+
   width: 100%;
-  
-  max-height: 80px;
+  max-height: 30px;
   display: flex;
   flex-direction: row;
   background-color: rgb(2, 80, 176);
@@ -15,6 +16,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 2%;
+  overflow: hidden; 
 }
 .RouterLinks {
   display: flex;
